FIX map container on small screens

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -193,7 +193,9 @@ button[type='submit'] {
   }
 
   .map-container {
-    min-height: 300px;
+    width: 100%;
+    aspect-ratio: 1 / 1;
+    min-height: unset;
   }
 
   .contact-info-bar {
